fixed scrambled text from shifting background image in mobile mode with overflow

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,6 @@ body {
     background-image: url('./assets/background/gits-back.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-position: top left;
+    background-position: center;
     background-size: cover;
 }
